--- a/BREAKING BAD Characters/css/style.css
+++ b/BREAKING BAD Characters/css/style.css
@@ -4,6 +4,7 @@ body {
     background-image: url(background1.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 
   }
   
